--- a/src/main/resources/assets/create_cobblemon/lang/en_us.json
+++ b/src/main/resources/assets/create_cobblemon/lang/en_us.json
@@ -2,8 +2,111 @@
   ### Ball Lids
   "item.create_cobblemon.red_ball_lid": "Red Ball Lid",
   "item.create_cobblemon.blue_ball_lid": "Blue Ball Lid",
+  "item.create_cobblemon.yellow_ball_lid": "Yellow Ball Lid",
+  "item.create_cobblemon.green_ball_lid": "Green Ball Lid",
+  "item.create_cobblemon.pink_ball_lid": "Pink Ball Lid",
+  "item.create_cobblemon.black_ball_lid": "Black Ball Lid",
+  "item.create_cobblemon.white_ball_lid": "White Ball Lid",
+  "item.create_cobblemon.great_ball_lid": "Great Ball Lid",
+  "item.create_cobblemon.ultra_ball_lid": "Ultra Ball Lid",
+  "item.create_cobblemon.safari_ball_lid": "Safari Ball Lid",
+  "item.create_cobblemon.fast_ball_lid": "Fast Ball Lid",
+  "item.create_cobblemon.level_ball_lid": "Level Ball Lid",
+  "item.create_cobblemon.lure_ball_lid": "Lure Ball Lid",
+  "item.create_cobblemon.heavy_ball_lid": "Heavy Ball Lid",
+  "item.create_cobblemon.love_ball_lid": "Love Ball Lid",
+  "item.create_cobblemon.friend_ball_lid": "Friend Ball Lid",
+  "item.create_cobblemon.moon_ball_lid": "Moon Ball Lid",
+  "item.create_cobblemon.sport_ball_lid": "Sport Ball Lid",
+  "item.create_cobblemon.park_ball_lid": "Park Ball Lid",
+  "item.create_cobblemon.net_ball_lid": "Net Ball Lid",
+  "item.create_cobblemon.dive_ball_lid": "Dive Ball Lid",
+  "item.create_cobblemon.nest_ball_lid": "Nest Ball Lid",
+  "item.create_cobblemon.repeat_ball_lid": "Repeat Ball Lid",
+  "item.create_cobblemon.timer_ball_lid": "Timer Ball Lid",
+  "item.create_cobblemon.luxury_ball_lid": "Luxury Ball Lid",
+  "item.create_cobblemon.dusk_ball_lid": "Dusk Ball Lid",
+  "item.create_cobblemon.heal_ball_lid": "Heal Ball Lid",
+  "item.create_cobblemon.quick_ball_lid": "Quick Ball Lid",
+  "item.create_cobblemon.dream_ball_lid": "Dream Ball Lid",
+  "item.create_cobblemon.beast_ball_lid": "Beast Ball Lid",
+  "item.create_cobblemon.master_ball_lid": "Master Ball Lid",
+  "item.create_cobblemon.incomplete_master_ball_lid": "Incomplete Master Ball Lid",
+
+  "item.create_cobblemon.tumblestone_lid": "Tumblestone Lid",
+  "item.create_cobblemon.sky_tumblestone_lid": "Sky Tumblestone Lid",
+  "item.create_cobblemon.black_tumblestone_lid": "Black Tumblestone Lid",
+  "item.create_cobblemon.ancient_red_ball_lid": "Ancient Red Ball Lid",
+  "item.create_cobblemon.ancient_blue_ball_lid": "Ancient Blue Ball Lid",
+  "item.create_cobblemon.ancient_yellow_ball_lid": "Ancient Yellow Ball Lid",
+  "item.create_cobblemon.ancient_green_ball_lid": "Ancient Green Ball Lid",
+  "item.create_cobblemon.ancient_pink_ball_lid": "Ancient Pink Ball Lid",
+  "item.create_cobblemon.ancient_black_ball_lid": "Ancient Black Ball Lid",
+  "item.create_cobblemon.ancient_white_ball_lid": "Ancient White Ball Lid",
+  "item.create_cobblemon.ancient_great_ball_lid": "Ancient Great Ball Lid",
+  "item.create_cobblemon.ancient_ultra_ball_lid": "Ancient Ultra Ball Lid",
+  "item.create_cobblemon.ancient_feather_ball_lid": "Ancient Feather Ball Lid",
+  "item.create_cobblemon.ancient_wing_ball_lid": "Ancient Wing Ball Lid",
+  "item.create_cobblemon.ancient_jet_ball_lid": "Ancient Jet Ball Lid",
+  "item.create_cobblemon.ancient_heavy_ball_lid": "Ancient Heavy Ball Lid",
+  "item.create_cobblemon.ancient_leaden_ball_lid": "Ancient Leaden Ball Lid",
+  "item.create_cobblemon.ancient_gigaton_ball_lid": "Ancient Gigaton Ball Lid",
+
+  ### Incomplete Balls
+  "item.create_cobblemon.incomplete_red_ball": "Red Ball Lid",
+  "item.create_cobblemon.incomplete_blue_ball": "Blue Ball Lid",
+  "item.create_cobblemon.incomplete_yellow_ball": "Yellow Ball Lid",
+  "item.create_cobblemon.incomplete_green_ball": "Green Ball Lid",
+  "item.create_cobblemon.incomplete_pink_ball": "Pink Ball Lid",
+  "item.create_cobblemon.incomplete_black_ball": "Black Ball Lid",
+  "item.create_cobblemon.incomplete_white_ball": "White Ball Lid",
+  "item.create_cobblemon.incomplete_great_ball": "Great Ball Lid",
+  "item.create_cobblemon.incomplete_ultra_ball": "Ultra Ball Lid",
+  "item.create_cobblemon.incomplete_safari_ball": "Safari Ball Lid",
+  "item.create_cobblemon.incomplete_fast_ball": "Fast Ball Lid",
+  "item.create_cobblemon.incomplete_level_ball": "Level Ball Lid",
+  "item.create_cobblemon.incomplete_lure_ball": "Lure Ball Lid",
+  "item.create_cobblemon.incomplete_heavy_ball": "Heavy Ball Lid",
+  "item.create_cobblemon.incomplete_love_ball": "Love Ball Lid",
+  "item.create_cobblemon.incomplete_friend_ball": "Friend Ball Lid",
+  "item.create_cobblemon.incomplete_moon_ball": "Moon Ball Lid",
+  "item.create_cobblemon.incomplete_sport_ball": "Sport Ball Lid",
+  "item.create_cobblemon.incomplete_park_ball": "Park Ball Lid",
+  "item.create_cobblemon.incomplete_net_ball": "Net Ball Lid",
+  "item.create_cobblemon.incomplete_dive_ball": "Dive Ball Lid",
+  "item.create_cobblemon.incomplete_nest_ball": "Nest Ball Lid",
+  "item.create_cobblemon.incomplete_repeat_ball": "Repeat Ball Lid",
+  "item.create_cobblemon.incomplete_timer_ball": "Timer Ball Lid",
+  "item.create_cobblemon.incomplete_luxury_ball": "Luxury Ball Lid",
+  "item.create_cobblemon.incomplete_dusk_ball": "Dusk Ball Lid",
+  "item.create_cobblemon.incomplete_heal_ball": "Heal Ball Lid",
+  "item.create_cobblemon.incomplete_quick_ball": "Quick Ball Lid",
+  "item.create_cobblemon.incomplete_dream_ball": "Dream Ball Lid",
+  "item.create_cobblemon.incomplete_beast_ball": "Beast Ball Lid",
+  "item.create_cobblemon.incomplete_master_ball": "Master Ball Lid",
+
+  "item.create_cobblemon.incomplete_ancient_red_ball": "Ancient Red Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_blue_ball": "Ancient Blue Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_yellow_ball": "Ancient Yellow Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_green_ball": "Ancient Green Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_pink_ball": "Ancient Pink Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_black_ball": "Ancient Black Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_white_ball": "Ancient White Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_great_ball": "Ancient Great Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_ultra_ball": "Ancient Ultra Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_feather_ball": "Ancient Feather Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_wing_ball": "Ancient Wing Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_jet_ball": "Ancient Jet Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_heavy_ball": "Ancient Heavy Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_leaden_ball": "Ancient Leaden Ball Lid",
+  "item.create_cobblemon.incomplete_ancient_gigaton_ball": "Ancient Gigaton Ball Lid",
 
 
   ### Misc
+  "block.create_cobblemon.expquartzblock": "Exp. Quartz Block",
+  "block.create_cobblemon.exp_quartz_tiles": "Exp. Quartz Tiles",
+  "block.create_cobblemon.exp_quartz_small_tiles": "Small Exp. Quartz Tiles",
+  "item.create_cobblemon.exp_quartz": "Exp. Quartz",
+  "item.create_cobblemon.crushed_exp_quartz": "Crushed Exp. Quartz",
   "itemgroup.create_cobblemon": "Create: Cobblemon Industrialized"
 }
